crates/core/tests/ui/duplicate_enum_variant_attribute.stderr
error: expected only one #[mock] enum variant attribute, unable to infer which one to use.
 --> tests/ui/duplicate_enum_variant_attribute.rs:2:1
  |
2 | enum Foo {
  | ^^^^
