crates/core/tests/ui/duplicate_enum_variant_attribute.rs
#[derive(mock_default::Mock)]
enum Foo {
    #[mock]
    Bar,
    #[mock]
    Baz,
}

fn main() {}
